crates/syntax/snapshots/parser/err/cannot_call_literal.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/parser/err/cannot_call_literal.lua

---
SourceFile@0..5
  Error@0..2
    Str@0..2 "\"\""
  ExprStmt@2..4
    MultivalExpr@2..4
      ParenExpr@2..4
        LParen@2..3 "("
        Error@3..4
          RParen@3..4 ")"
  Whitespace@4..5 "\n"

=============================
Errors:
=============================
[
    SyntaxError(
        "A literal cannot be the start of a statement",
        0..2,
    ),
    SyntaxError(
        "Expected an expression",
        3..4,
    ),
    SyntaxError(
        "Expected RParen, got Eof",
        4..4,
    ),
    SyntaxError(
        "Expected a call expression",
        2..4,
    ),
]
