crates/syntax/snapshots/parser/err/function_no_ident.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/parser/err/function_no_ident.lua

---
SourceFile@0..22
  LocalFunctionDefStmt@0..21
    LocalKw@0..5 "local"
    Whitespace@5..6 " "
    FunctionKw@6..14 "function"
    Whitespace@14..15 " "
    ParamList@15..17
      LParen@15..16 "("
      RParen@16..17 ")"
    Whitespace@17..18 "\n"
    Block@18..18
    EndKw@18..21 "end"
  Whitespace@21..22 "\n"

=============================
Errors:
=============================
[
    SyntaxError(
        "expected a name",
        14..14,
    ),
]
