crates/syntax/snapshots/parser/err/multi_expr_stmt.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/parser/err/multi_expr_stmt.lua

---
SourceFile@0..24
  ExprStmt@0..23
    MultivalExpr@0..23
      CallExpr@0..17
        NameRef@0..5
          Ident@0..5 "print"
        Arglist@5..17
          LParen@5..6 "("
          MultivalExpr@6..16
            Literal@6..16
              Str@6..16 "\"asdfasdf\""
          RParen@16..17 ")"
      Comma@17..18 ","
      Whitespace@18..19 " "
      NameRef@19..23
        Ident@19..23 "asdf"
  Whitespace@23..24 "\n"

=============================
Errors:
=============================
[
    SyntaxError(
        "Expression statements can only be call expressions",
        19..23,
    ),
]
